Basic recoloring. Rest is broken. Added info to README

--- a/README
+++ b/README
@@ -1,17 +1,30 @@
 # FlatStudioDarkSolarized
 A Solarized Dark recolor of the Gtk aspect of FlatStudioDark.
 
+## Warning
+This theme is broken. The original theme was severely outdated and this fork
+hardly tries to fix it. Furthermore, the Gtk3 version is in a bad state,
+mostly because I hardly use Gtk3 apps.
+
+As you may have noticed I did something funny with selection coloring, 
+selected\_fg\_color gets an accent and selected\_bg\_color hardly changes
+(depending on the context). I tried to alter scales (progressbar) so that the
+progress does get accented, but I haven't done much tests.
+
+While I appreciate bug reports and suggestions, if they're not crucial you're
+better off doing the bug wrangling yourself since, as I stated already, I
+hardly use it.
+
 For further details about either project, see the resources of the respective authors.
 
 # Attribution / Legal
+Read: These people did the real work
 ## FlatStudioDark
 Author: Rafa Cobreros rafacobreros@gmail.com  
 License: GPL  
-Original theme in:  
-http://gnome-look.org/content/show.php/FlatStudio?content=154296
+[http://gnome-look.org/content/show.php/FlatStudio?content=154296](http://gnome-look.org/content/show.php/FlatStudio?content=154296)
 
 ## Solarized
 Author: Ethan Schoonover  
 License: MIT  
-Upstream:  
-http://ethanschoonover.com/solarized
+[http://ethanschoonover.com/solarized](http://ethanschoonover.com/solarized)
